tests/ui/for-loop-while/for-loop-refutable-pattern-error-message.rs
fn main() {
    for &1 in [1].iter() {} //~ ERROR refutable pattern in `for` loop binding
}
